system/argocd/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - argocd.m15ty.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argocd-server
          port: 443
